# tcaf-v1

./: .gitignore  pyproject.toml  requirements.txt  run.py
clauses/: registry.py
clauses/clause_1_1_1/: clause.py  tc11_tls_deprecated_ciphers.py  tc12_snmp_v1_disabled.py  tc13_snmp_v2c_disabled.py  tc14_snmp_v3_authpriv.py  tc1_ssh_first_connection.py  tc2_ssh_valid_credentials.py  tc3_ssh_invalid_credentials.py  tc4_https_auth_prompt.py  tc5_https_valid_credentials.py  tc6_https_invalid_credentials.py  tc7_ssh_v1_disabled.py  tc8_tls10_disabled.py  tc9_tls11_disabled.py
clauses/clause_1_6_1/: clause.py
cli/: main.py
config/: profile_loader.py  settings.py
core/: engine.py
device/: detector.py
icaf/adapters/: adapter_factory.py  base_adapter.py  cisco_adapter.py  linux_adapter.py  openwrt_adapter.py
icaf/clauses/: registry.py
icaf/cli/: main.py
icaf/config/: profile_loader.py  settings.py
icaf/core/: clause_runner.py  engine.py  step.py  step_runner.py
icaf/device/: detector.py
icaf/profile/: alpine.yaml  default.yaml
icaf/reporting/: report_factory.py  report_manager.py  spec_loader.py
icaf/runtime/: context.py
icaf/steps/: analyze_pcap_step.py  auto_login_step.py  browser_screenshot_step.py  check_output_step.py  clear_terminal_step.py  click_step.py  command_step.py  (+13 more)
profile/: default.yaml  juniper.yaml  metasploitable.yaml
reporting/: helpers.py  report_factory.py  report_manager.py
runtime/: context.py
terminal/: base_terminal.py  manager.py  terminal.py  terminal_factory.py  visible_terminal.py
utils/: dut_info.py  logger.py
(+41 files in other folders)
